<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Current Version :"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/app_version"
        android:textColor="@color/darkblue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Released On :"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/app_release_date"
        android:textColor="@color/darkblue"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view1"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#b7b2b2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Next Version :"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="5dp"
        android:text="@string/next_app_version"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="10dp"
        android:text="Release Date :"
        android:textColorLink="@color/black"
        android:textSize="12sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp"
        android:text="@string/next_release_date"
        android:textColor="@color/design_default_color_primary_dark"
        android:textSize="16sp"
        android:textStyle="bold" />

    <View
        android:id="@+id/view2"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_marginTop="5dp"
        android:background="#b7b2b2" />

    <!--<Button
        android:id="@+id/btnCancel"
        android:layout_width="100dp"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:background="@android:color/holo_blue_light"
        android:text="OK">
    </Button>-->

</LinearLayout>
