<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content">

    <TableLayout
        android:id="@+id/inputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="10dp"
        android:layout_marginRight="5dp"
        android:background="@drawable/layout_border">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/fromDateLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/fromDateText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="2019-01-01"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/fromDateImageLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/border_right"
                android:layout_weight="0.1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:src="@drawable/calender_24" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/toDateLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.40"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/toDateText"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:paddingLeft="10dp"
                    android:text="2019-01-01"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/toDateImageLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="@drawable/border_right"
                android:layout_weight="0.1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:paddingLeft="5dp"
                    android:src="@drawable/calender_24" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="#b7b2b2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/typeLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/typeTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/both_sector"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/typeImageLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/list2_32" />
            </LinearLayout>

        </TableRow>

        <!--<TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="#b7b2b2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp"
                    android:text="Sector"
                    android:textColor="@color/light_blue"
                    android:textSize="13sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </TableRow>-->

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="#b7b2b2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/sectorLayout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:orientation="vertical"
                android:paddingTop="12dp"
                android:paddingBottom="12dp">

                <TextView
                    android:id="@+id/sectorTextView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/all_sector"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"
                    android:textSize="16sp" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/sectorImageLayout"
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:layout_weight="0.1">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/list2_32" />
            </LinearLayout>

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="wrap_content"
                android:layout_height="0.5dp"
                android:background="#b7b2b2" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnCancel"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/colorLightAccent"
                    android:text="Cancel">
                </Button>
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSearch"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/lightgreen"
                    android:text="Search">
                </Button>
            </LinearLayout>
        </TableRow>

    </TableLayout>

    <com.google.android.gms.ads.AdView xmlns:ads="http://schemas.android.com/apk/res-auto"
        android:id="@+id/adView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_add_id_1">
    </com.google.android.gms.ads.AdView>
</RelativeLayout>